fixed work page layout issues

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -107,91 +107,92 @@
 	}
 }
 
-.hola, .portfolio {
-	background: white;
-	height: 100vh;
-	text-align: center;
+// .portfolio {
+// 	background: white;
+// 	height: 100vh;
+// 	text-align: center;
 
-	.doing {
-		color: $purple;
-		margin-top: 25vh;
-		margin-bottom: 15vh;
-	}
+// 	.doing {
+// 		color: $purple;
+// 		margin-top: 25vh;
+// 		margin-bottom: 15vh;
+// 	}
 
-	.hola-image, .portfolio-image-intro, .build-image {
-		border: 4px solid $yellow;
-		border-radius: 50%;
-		height: 200px;
-		margin-bottom: 2em;
-		margin-top: 4em;
-		width: 200px;
-	}
-	.build {
-		text-align: justify;
-	}
+// 	.hola-image, .build-image,
+// 	.portfolio-image-intro {
+// 		border: 4px solid $yellow;
+// 		border-radius: 50%;
+// 		height: 200px;
+// 		margin-bottom: 2em;
+// 		margin-top: 4em;
+// 		width: 200px;
+// 	}
+// 	.build {
+// 		text-align: justify;
+// 	}
 
-	.build-text {
-		margin-top: 4em;
-	}
+// 	.build-text {
+// 		margin-top: 4em;
+// 	}
 
-	h4 {
-		color: $purple;
-	}
-	p {
-		color: $purple;
-		font-size: 1.5em;
-	}
+// 	h4 {
+// 		color: $purple;
+// 	}
+// 	p {
+// 		color: $purple;
+// 		font-size: 1.5em;
+// 	}
 
-	@media only screen and (max-width : 480px) {
-		p {
-			font-size: 1em;
-		}
-		.build {
-			text-align: center;
-			h4 {
-				text-align: center;
-			}
-			p {
-				text-align: justify;
-			}
-		}
+// 	@media only screen and (max-width : 480px) {
+// 		p {
+// 			font-size: 1em;
+// 		}
+// 		.build {
+// 			text-align: center;
+// 			h4 {
+// 				text-align: center;
+// 			}
+// 			p {
+// 				text-align: justify;
+// 			}
+// 		}
 
-		.build-text {
-			margin-top: 2em;
-		}
+// 		.build-text {
+// 			margin-top: 2em;
+// 		}
 		
-		.frontend-image, .backend-image {
-			// display: block;
-			// float: left;
-			// text-align: center;
-		}
-	}
+// 		.frontend-image, .backend-image {
+// 			// display: block;
+// 			// float: left;
+// 			// text-align: center;
+// 		}
+// 	}
 
-	@media only screen and (max-width : 768px) {
-		p {
-			font-size: 1em;
-		}
+// 	@media only screen and (max-width : 768px) {
+// 		p {
+// 			font-size: 1em;
+// 		}
 
-		.build {
-			text-align: center;
+// 		.build {
+// 			text-align: center;
 
-			h4 {
-				text-align: center;
-			}
-			p {
-				text-align: justify;
-			}
-		}
+// 			h4 {
+// 				text-align: center;
+// 			}
+// 			p {
+// 				text-align: justify;
+// 			}
+// 		}
 
-		.build-text {
-			margin-top: 3em;
-		}
+// 		.build-text {
+// 			margin-top: 3em;
+// 		}
 		
-		// .frontend-image, .backend-image {
-		// 	float: none;
-		// }
-	}
-} // end .hola .portfolio
+// 		// .frontend-image, .backend-image {
+// 		// 	float: none;
+// 		// }
+// 	}
+// } // end .hola .portfolio
 
 .portfolio {
 
@@ -392,6 +393,12 @@
 	margin-bottom: 2em;
 	margin-top: 4em;
 	width: 200px;
+
+	@media only screen and (max-width : 768px) {
+		margin-left: auto;
+		margin-right: auto;
+		float: none;
+	}
 }
 
 .build-image {
@@ -403,4 +410,84 @@
 }
 
 
+.portfolio {
+	background: white;
+	// height: 100vh;
+	text-align: center;
 
+	.doing {
+		color: $purple;
+		margin-top: 25vh;
+		margin-bottom: 15vh;
+	}
+
+	.hola-image, .build-image,
+	.portfolio-image-intro {
+		border: 4px solid $yellow;
+		border-radius: 50%;
+		height: 200px;
+		margin-bottom: 2em;
+		margin-top: 4em;
+		width: 200px;
+	}
+	.build {
+		text-align: justify;
+	}
+
+	.build-text {
+		margin-top: 4em;
+	}
+
+	h4 {
+		color: $purple;
+	}
+	p {
+		color: $purple;
+		font-size: 1.5em;
+	}
+
+	@media only screen and (max-width : 480px) {
+		p {
+			font-size: 1em;
+		}
+		.build {
+			text-align: center;
+			h4 {
+				text-align: center;
+			}
+			p {
+				text-align: justify;
+			}
+		}
+
+		.build-text {
+			margin-top: 2em;
+		}
+		
+	}
+
+	@media only screen and (max-width : 768px) {
+		p {
+			font-size: 1em;
+		}
+
+		.build {
+			text-align: center;
+
+			h4 {
+				text-align: center;
+			}
+			p {
+				text-align: justify;
+			}
+		}
+
+		.build-text {
+			margin-top: 3em;
+		}
+		
+		// .frontend-image, .backend-image {
+		// 	float: none;
+		// }
+	}
+} // end .hola .portfolio
